@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
+  creating metadata.xml to shut up repoman
+
   02 Jun 2008; Petteri Räty <betelgeuse@gentoo.org>
   fb-photo-uploader-1.3.3.ebuild:
   Keyword ~x86.
